# Neuromodulation-simulations

./: .gitignore  Data_loader.py  Data_loaderV2.py  Dataset2_creator.py  Dataset_creator.py  Model_Unet3D.py  README.md  Table_data.py  Test_graficas.py  Test_sim.py  Unet3D_V2.py  ayudita.py  checkpoint_ranking_table.tex  data_TUS_V3.py  dataset_phys.py  datasplit.py  image_test_V2  main.py  master_results.csv  master_results_2.csv  master_results_cGAN1.csv  master_results_cGANFreezee2expC.csv  master_results_cGANFreezee2expDB_finett.csv  master_results_cGANFreezeexpC.csv  master_results_cGANexp2.csv  master_results_cGANexp3.csv  master_results_cGANexp3_300.csv  master_results_cGANexp4_1_300.csv  master_results_expDV2.csv  master_results_expDexpC1.csv  master_results_expc2.csv  master_results_manual.csv  master_results_nuevo.csv  model_phys.py  pandastolatex.py  pyproject.toml  test.py  test_epochs_V1.py  train_V1.py  train_V2.py  (+1 more)
Antiguos/: Train_expB.py  train_V1.py  train_V2.py  train_antiguo.py
Extra_tools/: Test_graficas.py  Test_graficascGAN.py
Train_Organized/: cGAN1.py  cGAN2.2.py  cGAN2.py  callbacks.py  checkpointing.py  losses.py  test_epoch_cGan2.py  test_epochs_V1.py  teste_epoch_cgan.py  train:v3Agr.py  trainV3_2.py  train_expD.py  trainscript.py  utils.py  visual_test_Unet.py
simulations/: Dataset2_creator.py  Dataset3_creator.py  Dataset4_creator.py  pyproject.toml
src/: testcgans.py  testepochs.py  trainExpC_2.py  trainV3_2.py  train_expD.py  trainv3Agr.py
tablas/: master_results_cGANFreezee2expDB_finett.csv  master_results_cGANFreezeexpDexpB.csv  (+6 more)
(+19 files in other folders)
